@@ -34,10 +34,10 @@ clean:
 	dh_testdir
 	dh_testroot
 
+	dh_clean build-stamp install-stamp
+
 	# Add commands to clean up after the build process here
 	[ ! -f Makefile ] || $(MAKE) realclean
-
-	dh_clean build-stamp install-stamp
 
 install: build install-stamp
 install-stamp:
